...
    [_searchButton setTitle:DZRTranslation.searchArtistsButtonSearch forState:UIControlStateNormal];
    [_searchButton setTitleColor:DZRColors.white forState:UIControlStateNormal];
    [_searchButton setBackgroundColor:DZRColors.pink];
    [_searchButton.layer setCornerRadius:4];
    [_searchButton.titleLabel setFont:DZRFonts.medium];
    [_searchButton setContentEdgeInsets:UIEdgeInsetsMake(0, 12, 0, 12)];
    [_searchButton setAccessibilityLabel:@"searchButton"];
}

#pragma mark - Lifecycle
- (void)viewDidLoad
{
    [super viewDidLoad];
...
